# tap-customerio

./: README.md  meltano.yml  pyproject.toml
tap_customerio/: __init__.py  client.py  streams.py  tap.py  utils.py
tap_customerio/schemas/: campaigns.json  campaigns_metrics.json  newsletters.json  newsletters_metrics.json  segments.json
tests/: __init__.py  test_core.py
